--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -863,7 +863,7 @@ footer {
 
 .sidebar-nav .nav-content a:hover,
 .sidebar-nav .nav-content a.active {
-  color: #4154f1;
+  color: #ce41f1;
 }
 
 .sidebar-nav .nav-content a.active i {
